--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: "postgres"
     image: "postgres:latest"
     volumes:
-      - "./data/postgres-data:/var/lib/postgresql/data"
+      - "/data/postgres-data:/var/lib/postgresql/data"
     environment:
       PGDATA: "/var/lib/postgresql/data"
       POSTGRES_DB: "ilp-kit-db"
@@ -28,7 +28,7 @@ services:
 # enable this for development, with a local ilp-kit folder
 #    build: "ilp-kit"
     volumes:
-      - "./data/uploads:/usr/src/app/uploads"
+      - "/data/uploads:/usr/src/app/uploads"
 # ( we might not need this, with any luck )
 #      - "./env.list:/usr/src/app/env.list"
     networks:
