--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
       API_PUBLIC_PATH: "/api"
       API_PUBLIC_PORT: "443"
       API_SECRET: "${ILP_SECRET}"
+      API_MAILGUN_API_KEY: "${MAILGUN_API_KEY}"
+      API_MAILGUN_DOMAIN: "${MAILGUN_DOMAIN}"
       CLIENT_HOST: "${ILP_DOMAIN}"
       CLIENT_PORT: "3010"
       CLIENT_PUBLIC_PORT: "443"
@@ -66,3 +68,4 @@ services:
       LEDGER_AMOUNT_PRECISION: "19"
       ILP_KIT_CLI_VERSION: "11.0.1"
       DEBUG: "connector*,ilp*"
+      
